MEET-362 prevent overflow of window

--- a/frontend/css/hublin.less
+++ b/frontend/css/hublin.less
@@ -28,6 +28,11 @@ html.no-getusermedia div.meetings-landing-page #unsupported {
 
 body {
   overflow-x: hidden;
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
 }
 
 .script-font {
