--- a/frontend/css/live-conference.less
+++ b/frontend/css/live-conference.less
@@ -135,6 +135,11 @@ html.no-getusermedia body.hublin-live-conference-app #unsupported {
     width: 4em;
     flex: 0 1 60px;
   }
+
+  .left, .right, .middle {
+    margin-top: auto;
+    margin-bottom: auto;
+  }
 }
 .information {
   color: @information-color;
